--- a/springboot-compose/pom.xml
+++ b/springboot-compose/pom.xml
@@ -28,6 +28,10 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
+		
+  <sonar.organization>omkar-shelke25</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+
 	</properties>
 	<dependencies>
 		<dependency>
