--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,8 @@ jobs:
           sudo apt install postgresql postgresql-contrib
           sudo systemctl start postgresql
           sudo systemctl enable postgresql
+          psql -U postgres
+          ALTER USER username postgres WITH PASSWORD 'postgres';
       
       - name: compile the code before testing
         run: |
