--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   compile-and-build:
-    runs-on: ubuntu:latest
+    runs-on: ubuntu-latest
     services: 
       postgres:
         image: postgres:15.10-alpine3.21
