--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,7 @@ jobs:
           path: springboot-compose
       - name: compile the code
         run: |
+          cd  springboot-compose
           mvn install compile
       
         
