--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,7 @@ jobs:
       - name: compile the code
         run: |
           cd springboot-compose
-          mvn install compile
-      
+          mvn install
         
       
       
