--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,9 +34,8 @@ jobs:
           distribution: 'temurin'
           java-version: '21'
 
-      - name: Install Maven
-        run: sudo apt-get update && sudo apt-get install -y maven
-
       - name: Compile the code
-        working-directory: springboot-compose
-        run: mvn install
+        run: |
+          ls -al
+          cd springboot-compose
+          ls -la
