--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,6 @@ jobs:
     steps:
       - name: Checkout the code
         uses: actions/checkout@v4.2.2
-        with:
-          path: springboot-compose
 
       - name: Setup Java JDK
         uses: actions/setup-java@v4.6.0
@@ -34,8 +32,16 @@ jobs:
           distribution: 'temurin'
           java-version: '21'
 
+      - name: Install Maven
+        run: sudo apt-get update && sudo apt-get install -y maven
+
+      - name: List files at root
+        run: ls -al
+
+      - name: List files in springboot-compose
+        working-directory: springboot-compose
+        run: ls -la
+
       - name: Compile the code
-        run: |
-          ls -al
-          cd springboot-compose
-          ls -la
+        working-directory: springboot-compose
+        run: mvn install
