--- a/springboot-compose/pom.xml
+++ b/springboot-compose/pom.xml
@@ -29,8 +29,8 @@
 	<properties>
 		<java.version>21</java.version>
 		
-  <sonar.organization>omkar-shelke25</sonar.organization>
-  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+  //<sonar.organization>omkar-shelke25</sonar.organization>
+ // <sonar.host.url>https://sonarcloud.io</sonar.host.url>
 
 	</properties>
 	<dependencies>
